Arun: #BugFix: Removed gap between tabs and tab content

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -309,3 +309,7 @@ textarea {
 .bar-footer {
   bottom: 8%;
 }
+
+.has-tabs-top {
+  top: 44px;
+}
